update code base

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <h4>MARK ZUCKERBERG</h4>
             <img src="./media/close.svg" alt="close">
         </div>
+
+        <div class="bottom">
+            <div class="line">
+                <div class="line1"></div>
+                <p class="p1">TODAY</p>
+                <div class="line1"></div>
+            </div>
+
+            <div class="tmeg">
+                <h6>10:53</h6>
+                <p class="p2">Hi,Mark! i made a new design for<br> Messager App</p>
+            </div>
+        </div>
     </div>
 
 </body>
