update code base

--- a/index.html
+++ b/index.html
@@ -27,8 +27,28 @@
 
             <div class="tmeg">
                 <h6>10:53</h6>
-                <p class="p2">Hi,Mark! i made a new design for<br> Messager App</p>
+                <p class="p2">Hi,Mark! i made a new design for<br> Messager App.</p>
             </div>
+
+            <div class="tmeg2">
+                <h6 class="h1">10:53</h6>
+                <p class="p3">Yo! Send it to my assistant and we'll review it during the year.</p>
+            </div>
+
+            <div class="tmeg">
+                <h6>10:53</h6>
+                <p class="p4">But Mark....</p>
+            </div>
+
+            <div class="tmeg2">
+                <h6 class="h1">10:53</h6>
+                <p class="p5">You were blocked by the user.</p>
+            </div>
+
+        </div>
+
+        <div class="big">
+
         </div>
     </div>
 
