update code base

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
                 <p class="p5">You were blocked by the user.</p>
             </div>
 
+            <div class="big">
+                <p class="p9">Enter your message</p>
+                <h5>SEND</h5>
+            </div>
         </div>
 
-        <div class="big">
-
-        </div>
     </div>
 
 </body>
