update code base

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="big">
-                <p class="p9">Enter your message</p>
+                <input class="p9" placeholder="Enter your message">
                 <h5>SEND</h5>
             </div>
         </div>
